--- a/app/src/main/res/layout/activity_new_drug.xml
+++ b/app/src/main/res/layout/activity_new_drug.xml
@@ -63,6 +63,23 @@
             android:textColor="@color/blackFonce"
             android:textSize="18sp" />
 
+        <Button
+            android:id="@+id/button_start_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/text_start"
+            android:layout_toRightOf="@id/text_start"
+            android:layout_marginStart="35dp"
+            android:textSize="18sp"/>
+
+        <Button
+            android:id="@+id/button_end_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@id/text_end"
+            android:layout_toRightOf="@id/text_start"
+            android:layout_marginStart="35dp"
+            android:textSize="18sp"/>
 
         <Button
             android:id="@+id/button_ok"
