--- a/app/src/main/res/layout/activity_new_drug.xml
+++ b/app/src/main/res/layout/activity_new_drug.xml
@@ -121,6 +121,30 @@
             android:inputType="number"
             android:text="1" />
 
+        <TextView
+            android:id="@+id/text_middle_frequency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/edit_frequency"
+            android:layout_alignBaseline="@id/edit_frequency"
+            android:layout_marginLeft="15dp"
+            android:textColor="@color/blackFonce"
+            android:textSize="18sp"
+            android:text="@string/text_middle_frequency"
+             />
+
+        <Spinner
+            android:id="@+id/spinner_frequency_selector"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/text_middle_frequency"
+            android:layout_alignBaseline="@id/text_middle_frequency"
+            android:layout_marginLeft="15dp"
+            android:prompt="@string/spinner_prompt"
+            android:entries="@array/spinner_frequency_selector"
+            />
+
+
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
