--- a/app/src/main/res/layout/activity_new_drug.xml
+++ b/app/src/main/res/layout/activity_new_drug.xml
@@ -82,29 +82,13 @@
             android:layout_toRightOf="@id/text_start"
             android:textSize="18sp" />
 
-        <Button
-            android:id="@+id/button_ok"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="@dimen/activity_horizontal_margin"
-            android:text="@string/button_ok" />
-
-        <Button
-            android:id="@+id/button_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@id/button_ok"
-            android:layout_toLeftOf="@id/button_ok"
-            android:text="@string/button_cancel" />
 
         <TextView
             android:id="@+id/text_frequency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_end"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="45dp"
             android:text="@string/text_frequency"
             android:textColor="@color/blackFonce"
@@ -116,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/text_frequency"
             android:layout_alignBaseline="@id/text_frequency"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="25dp"
             android:textColor="@color/blackFonce"
             android:inputType="number"
             android:text="1" />
@@ -127,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/edit_frequency"
             android:layout_alignBaseline="@id/edit_frequency"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="20dp"
             android:textColor="@color/blackFonce"
             android:textSize="18sp"
             android:text="@string/text_middle_frequency"
@@ -139,9 +123,21 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/text_middle_frequency"
             android:layout_alignBaseline="@id/text_middle_frequency"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="20dp"
             android:prompt="@string/spinner_prompt"
             android:entries="@array/spinner_frequency_selector"
+            />
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="15dp"
+            android:src="@drawable/ic_done"
+            app:backgroundTint="#ffffff"
+            android:clickable="true"
+            app:fabSize="normal"
             />
 
 
