--- a/app/src/main/res/layout/activity_new_drug.xml
+++ b/app/src/main/res/layout/activity_new_drug.xml
@@ -130,6 +130,7 @@
             />
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
